--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   package_info_plus: ^8.3.0
   flutter_svg: ^2.1.0
   intl: ^0.20.2
+  animated_bottom_navigation_bar: ^1.4.0
 
 dev_dependencies:
   flutter_test:
