--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,12 @@ dependencies:
   flutter_svg: ^2.1.0
   intl: ^0.20.2
   animated_bottom_navigation_bar: ^1.4.0
+  geolocator: ^14.0.2
+  flutter_map: ^8.1.1
+  permission_handler: ^12.0.1
+  latlong2: ^0.9.1
+  sqflite: ^2.4.2
+  geocoding: ^4.0.0
 
 dev_dependencies:
   flutter_test:
