--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   latlong2: ^0.9.1
   sqflite: ^2.4.2
   geocoding: ^4.0.0
+  dio: ^5.9.0
+  shared_preferences: ^2.5.3
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
